--- a/app/index.html
+++ b/app/index.html
@@ -3,9 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>NmfSchedule</title>
+    <title>NMF 2016 Schedule</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="og:description" content="Build your custom schedule of the shows you want to see at Norman Music Festival." />
+    <meta name="og:image" content="/logo.png" />
 
     {{content-for "head"}}
 
