Open graph image tweak

--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="og:description" content="Build your custom schedule of the shows you want to see at Norman Music Festival." />
-    <meta name="og:image" content="/logo.png" />
+    <meta name="og:image" content="http://www.nmfschedule.com/logo.png" />
 
     {{content-for "head"}}
 
